[package]
name = "dygma_focus"
version = "0.3.1"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
description = "Dygma Focus API, for use with Dygma keyboards"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/mbwilding/dygma-focus-api-rs"

[dependencies]
anyhow = "1.0"
dygma_focus_proc_macros = { version = "0.3.1", path = "../dygma_focus_proc_macros" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serialport = "4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["EventTarget", "SerialPort", "SerialOptions", "SerialPortInfo", "ReadableStream", "WritableStream"] }
